backend-app-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-test
  namespace: yo-development
  labels:
    app: backend-app-test
spec:
  selector:
    app: backend-app-test
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  internalTrafficPolicy: Cluster
