backend-app-test/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: yo-backend
  namespace: yo-development
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - hosts:
        -  "kube-system/*"
        - "./*"
